# spider-man-movies-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
.sdk/: package-lock.json  package.json
go/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  go.mod  (+1 more)
go-cli/: .gitignore  Makefile  README.md  go.mod  main.go  words.go
go-mcp/: .gitignore  Makefile  README.md  go.mod  main.go  tools.go
lua/: AGENTS.md  (+8 more)
py/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.py  features.py  pyproject.toml  spidermanmovies_sdk.py  spidermanmovies_types.py
py/core/: context.py  error.py  operation.py  result.py  spec.py
py/entity/: justwatch_entity.py  media_entity.py  photo_entity.py  search_entity.py
py/feature/: audit_feature.py  base_feature.py  clienttrack_feature.py  idempotency_feature.py  log_feature.py  metrics_feature.py  ratelimit_feature.py  rbac_feature.py  retry_feature.py  test_feature.py  timeout_feature.py
py/test/: runner.py  test_exists.py  test_justwatch_direct.py  test_justwatch_entity.py  test_media_direct.py  test_media_entity.py  test_netsim.py  test_photo_direct.py  test_photo_entity.py  test_pipeline.py  test_primary_utility.py  test_readme_examples.py  test_search_direct.py  test_search_entity.py
py/utility/: done.py  feature_add.py  feature_hook.py  feature_init.py  make_context.py  make_error.py  make_fetch_def.py  make_options.py  make_point.py  make_request.py  make_response.py  make_spec.py  make_url.py  prepare_auth.py  prepare_params.py  prepare_query.py  register.py  result_body.py  transform_request.py
(+472 files in other folders)
