[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "voxgig-sdk-spider-man-movies"
version = "0.0.1"
description = "Unofficial generated Python SDK for the Free Movie DB - The Free Movie Database public API. Not affiliated with or endorsed by the upstream API provider."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
keywords = ["voxgig", "sdk", "generated-sdk", "openapi", "api-client", "spider-man-movies"]
dependencies = [
    "requests>=2.33",
]

[project.urls]
Homepage = "https://github.com/voxgig-sdk/spider-man-movies-sdk"
Repository = "https://github.com/voxgig-sdk/spider-man-movies-sdk"
Issues = "https://github.com/voxgig-sdk/spider-man-movies-sdk/issues"

# Explicit package list — setuptools auto-discovery refuses to pick when
# multiple top-level dirs (core/entity/feature/utility) are present.
[tool.setuptools.packages.find]
include = ["core*", "entity*", "feature*", "utility*"]
